deploy/metrix-demo/mf-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metrix-demo
  namespace: dev
  annotations:
    flux.weave.works/tag.metrix-demo: glob:*
    flux.weave.works/automated: 'true'
spec:
  replicas: 4
  selector:
    matchLabels:
      app: metrix-demo
  template:
    metadata:
      labels:
        app: metrix-demo
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: metrix-demo
        image: quay.io/brice/metrics-demo:v4-subscription-service
        ports:
        - containerPort: 3000
        
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
